--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "time.h": "c",
         "unistd.h": "c",
         "waitflags.h": "c",
-        "fcntl2.h": "c"
+        "fcntl2.h": "c",
+        "kernel.h": "c"
     }
 }
